--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/jayblack388/2-3-Project/issues"
   },
-  "homepage": "https://github.com/jayblack388/2-3-Project#readme"
+  "homepage": "https://github.com/jayblack388/2-3-Project#readme",
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2"
+  }
 }
